增加商品-> 增加密碼檢驗

--- a/nccu_database_project/main_search/templates/set_commodity.html
+++ b/nccu_database_project/main_search/templates/set_commodity.html
@@ -9,6 +9,7 @@
     <h3>GET方式</h3>
     <form action="/set_commodity" method="get" name="add_user">
         <p><span>own_person :</span><input type="text" placeholder="own_person" name="own_person"></p>
+        <p><span>password :</span><input type="text" placeholder="password" name="password"></p>
         <p><span>name_zh :</span><input type="text" placeholder="name_zh" name="name_zh"></p>
         <p><span>type :</span><input type="text" placeholder="type" name="type"></p>
         <p><span>describe :</span><input type="text" placeholder="describe" name="describe"></p>
