fix bug add index function 未做 : 匯入定義好的location, type

--- a/nccu_database_project/main_search/templates/index.html
+++ b/nccu_database_project/main_search/templates/index.html
@@ -15,6 +15,8 @@
         <p><a href="/add_user/">新增使用者</a></p>
         <p><a href="/add_commodity/">增加新商品</a></p>
         <p><a href="/buy_commodity/">買家要求商品</a></p>
+        <p><a href="/search/">搜尋商品</a></p>
+        <p><a href="/search_Record/">搜尋紀錄</a></p>
     </div>
 </body>
 </html>
