--- a/nccu_database_project/main_search/templates/buy_commodity.html
+++ b/nccu_database_project/main_search/templates/buy_commodity.html
@@ -14,6 +14,7 @@
         <p><span>company :</span><input type="text" placeholder="company" name="company"></p>
         <p><span>date :</span><input type="text" placeholder="date" name="date"></p>
         <input type="reset">&nbsp;&nbsp;&nbsp;&nbsp;<input type="submit" value="add">
+        <p><a href="/index/">index</a></p>
     </form>
 
 </body>
