--- a/nccu_database_project/main_search/templates/index.html
+++ b/nccu_database_project/main_search/templates/index.html
@@ -11,7 +11,9 @@
         <p><a href="/admin/">admin</a></p>
         <p><a href="/set_bank/">set_bank</a></p>
         <p><a href="/set_state/">set_state</a></p>
-        <p><a href="/set_company/">set_company</a></p>
+        <p><a href="/set_type/">set_type</a></p>
+        <p><a href="/set_location/">set_location</a></p>
+        <p><a href="/search_Record/">搜尋紀錄</a></p>
         <p><a href="/add_user/">新增使用者</a></p>
         <p><a href="/add_commodity/">增加新商品</a></p>
         <p><a href="/buy_commodity/">買家要求商品</a></p>
