--- a/nccu_database_project/main_search/templates/set_user.html
+++ b/nccu_database_project/main_search/templates/set_user.html
@@ -12,6 +12,7 @@
         <p><span>password :</span><input type="text" placeholder="password" name="password"></p>
         <p><span>bank :</span><input type="text" placeholder="bank" name="bank"></p>
         <input type="reset">&nbsp;&nbsp;&nbsp;&nbsp;<input type="submit" value="add">
+        <p><a href="/index/">index</a></p>
     </form>
 
 </body>
