--- a/nccu_database_project/main_search/templates/Record_list.html
+++ b/nccu_database_project/main_search/templates/Record_list.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<p><a href="/index/">index</a></p>
   <form method="get">
     {{ filter.form.as_p }}
     <button type="submit">Search</button>
