--- a/nccu_database_project/main_search/templates/set_commodity.html
+++ b/nccu_database_project/main_search/templates/set_commodity.html
@@ -15,6 +15,7 @@
         <p><span>describe :</span><input type="text" placeholder="describe" name="describe"></p>
         <p><span>location :</span><input type="text" placeholder="location" name="location"></p>
         <input type="reset">&nbsp;&nbsp;&nbsp;&nbsp;<input type="submit" value="add">
+        <p><a href="/index/">index</a></p>
     </form>
 
 </body>
